--- a/src/app/chameleon-reports/med-execution-table/med-execution-table.component.html
+++ b/src/app/chameleon-reports/med-execution-table/med-execution-table.component.html
@@ -39,8 +39,14 @@
                   </mat-form-field>
                   
                   
-                  
-                  
+                  <mat-form-field appearance="fill">
+                    <mat-label>Unit Satellite Name</mat-label>
+                    <mat-select [formControl]="unitSatelliteNamesControl" multiple>
+                      <mat-option *ngFor="let name of unitSatelliteNameOptions" [value]="name">
+                        {{ name }}
+                      </mat-option>
+                    </mat-select>
+                  </mat-form-field>
                   
                   <mat-form-field class="filter-field">
                     <mat-label>שם גנרי</mat-label>
