--- a/src/app/chameleon-reports/vwinfection-control-icu/vwinfection-control-icu.component.html
+++ b/src/app/chameleon-reports/vwinfection-control-icu/vwinfection-control-icu.component.html
@@ -11,24 +11,25 @@
       <button mat-button (click)="resetFilters()" mat-raised-button color="primary">
         איפוס מסננים
       </button>
-      <button mat-button (click)="exportToExcel()" mat-raised-button color="accent">
-        ייצוא לאקסל
-      </button>
+      <img src="../../assets/excel.png" alt="Download" (click)="exportToExcel()" class="download-icon" width="50px" />
+
     </form>
   
     <!-- Scrollable Table Container -->
     <div class="table-responsive">
-      <mat-table [dataSource]="matTableDataSource" matSort dir="rtl" class="mat-elevation-z8" >
-        <ng-container *ngFor="let column of columns" [matColumnDef]="column">
-          <mat-header-cell *matHeaderCellDef mat-sort-header>{{ column }}</mat-header-cell>
-          <mat-cell *matCellDef="let element"> {{ element[column] }} </mat-cell>
-        </ng-container>
-  
-        <mat-header-row *matHeaderRowDef="columns"></mat-header-row>
-        <mat-row *matRowDef="let row; columns: columns"></mat-row>
-      </mat-table>
+        <mat-table [dataSource]="matTableDataSource" matSort dir="rtl" class="mat-elevation-z8">
+            <ng-container *ngFor="let column of columns" [matColumnDef]="column">
+              <mat-header-cell *matHeaderCellDef mat-sort-header>
+                {{ columnHeaders[column] || column }}
+              </mat-header-cell>
+              <mat-cell *matCellDef="let element"> {{ element[column] || '-' }} </mat-cell>
+            </ng-container>
+        
+            <mat-header-row *matHeaderRowDef="columns"></mat-header-row>
+            <mat-row *matRowDef="let row; columns: columns"></mat-row>
+          </mat-table>
     </div>
   
-    <mat-paginator [length]="totalResults" [pageSize]="10" [pageSizeOptions]="[10, 25, 50]"></mat-paginator>
+    <mat-paginator [length]="totalResults" [pageSize]="30" [pageSizeOptions]="[30, 100, 500]"></mat-paginator>
   </div>
   
