--- a/src/app/chameleon-reports/department-occupied-mitav/department-occupied-mitav.component.html
+++ b/src/app/chameleon-reports/department-occupied-mitav/department-occupied-mitav.component.html
@@ -2,25 +2,80 @@
     <div class="nine">
         <h1>{{ titleUnit }}<span>{{ Title1 }}{{ Title2 }}{{ totalResults }}</span></h1>
       </div>
+      <mat-card class="info-card mat-elevation-z4">
+        <mat-card-title>מידע כולל</mat-card-title>
+        <mat-card-content>
+          <div class="info-card-content">
+            <div>
+              <mat-icon>people</mat-icon>
+              <span class="info-label">סה"כ מטופלים:</span>
+              <strong>{{ totalResults }}</strong>
+            </div>
+            <div>
+              <mat-icon>info</mat-icon>
+              <span class="info-label">מידע נוסף:</span>
+              <strong>נתון לדוגמא</strong>
+            </div>
+          </div>
+        </mat-card-content>
+      </mat-card>
+      
     <form [formGroup]="filterForm" class="filter-form" dir="rtl">
       <mat-form-field class="long-search-bar">
         <mat-label>חיפוש</mat-label>
         <input matInput formControlName="globalFilter" />
       </mat-form-field>
+      <mat-form-field>
+        <mat-label>שם המחלקה</mat-label>
+        <mat-select formControlName="unitFilter">
+          <mat-option value="">הכל</mat-option>
+          <mat-option *ngFor="let unit of unitOptions" [value]="unit">{{ unit }}</mat-option>
+        </mat-select>
+      </mat-form-field>
       <button mat-raised-button color="primary" (click)="resetFilters()">איפוס</button>
       <!-- //<button mat-raised-button color="accent" (click)="exportToExcel()">ייצוא לאקסל</button> -->
+      
     </form>
   
     
-      <mat-table [dataSource]="dataSource" matSort dir="rtl" class="mat-elevation-z8">
+    <mat-table [dataSource]="dataSource" matSort dir="rtl" class="mat-elevation-z8">
         <ng-container *ngFor="let column of displayedColumns" [matColumnDef]="column">
           <mat-header-cell *matHeaderCellDef mat-sort-header>{{ getColumnLabel(column) }}</mat-header-cell>
-          <mat-cell *matCellDef="let element">{{ element[column] }}</mat-cell>
+      
+          <!-- Custom cell for PhysiotherapyConsultation -->
+          <ng-container *ngIf="column === 'PhysiotherapyConsultation'">
+            <mat-cell *matCellDef="let element" [ngClass]="{'red-text': element.PhysiotherapyConsultation === 'לא'}">
+              {{ element.PhysiotherapyConsultation }}
+            </mat-cell>
+          </ng-container>
+      
+          <!-- Custom cell for MobilityAssessment -->
+          <ng-container *ngIf="column === 'MobilityAssessment'">
+            <mat-cell *matCellDef="let element" [ngClass]="{'red-text': element.MobilityAssessment === 'אין תיעוד'}">
+              {{ element.MobilityAssessment }}
+            </mat-cell>
+          </ng-container>
+      
+          <!-- Custom cell for WalkingPrescription -->
+          <ng-container *ngIf="column === 'WalkingPrescription'">
+            <mat-cell *matCellDef="let element" [ngClass]="{'red-text': element.WalkingPrescription === 'לא'}">
+              {{ element.WalkingPrescription }}
+            </mat-cell>
+          </ng-container>
+      
+          <!-- Default cell for other columns -->
+          <ng-container *ngIf="column !== 'PhysiotherapyConsultation' && column !== 'MobilityAssessment' && column !== 'WalkingPrescription'">
+            <mat-cell *matCellDef="let element">
+              {{ element[column] }}
+            </mat-cell>
+          </ng-container>
         </ng-container>
-    
+      
         <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
         <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
       </mat-table>
+      
+      
     
       <mat-paginator [pageSizeOptions]="[10, 25, 50]" showFirstLastButtons></mat-paginator>
     </div>
