--- a/src/app/chameleon-reports/department-occupied-mitav/department-occupied-mitav.component.html
+++ b/src/app/chameleon-reports/department-occupied-mitav/department-occupied-mitav.component.html
@@ -3,20 +3,26 @@
         <h1>{{ titleUnit }}<span>{{ Title1 }}{{ Title2 }}{{ totalResults }}</span></h1>
       </div>
       <mat-card class="info-card mat-elevation-z4">
-        <mat-card-title>מידע כולל</mat-card-title>
+        <mat-card-title>מידע כללי</mat-card-title>
+
+        
         <mat-card-content>
           <div class="info-card-content">
+            
             <div>
-              <mat-icon>directions_walk</mat-icon>
+              
               <span class="info-label">{{ walkingStats }}</span>
+              <mat-icon>directions_walk</mat-icon>
             </div>
             <div>
-              <mat-icon>accessibility</mat-icon>
+              
               <span class="info-label">{{ mobilityStats }}</span>
+              <mat-icon>accessibility</mat-icon>
             </div>
             <div>
-              <mat-icon>medical_services</mat-icon>
+             
               <span class="info-label">{{ physiotherapyStats }}</span>
+              <mat-icon>medical_services</mat-icon>
             </div>
           </div>
         </mat-card-content>
