--- a/src/app/chameleon-reports/vwinfection-control-icu/vwinfection-control-icu.component.scss
+++ b/src/app/chameleon-reports/vwinfection-control-icu/vwinfection-control-icu.component.scss
@@ -323,4 +323,30 @@
   .mat-paginator-page-size-label {
     font-size: 14px; /* Font size for paginator text */
   }
+  .loading-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 100vh; /* Full screen height */
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(255, 255, 255, 0.8); /* Semi-transparent background */
+    z-index: 1000;
+  }
+  
+  .spinner-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .loading-text {
+    font-size: 18px;
+    font-weight: bold;
+    color: #333;
+    margin-top: 10px;
+  }
   
