--- a/src/app/mitav/mitav-mobility/mitav-mobility.component.html
+++ b/src/app/mitav/mitav-mobility/mitav-mobility.component.html
@@ -67,29 +67,13 @@
                   <strong>Overall Mobility Percentage: {{ gaugeValue | number:'1.1-1' }}%</strong>
                 </div>
               </div>
-            
+              <button mat-raised-button color="primary" (click)="openDepartmentPercentagesDialog()">
+                View Department Percentages
+              </button>
             </mat-card>
           </div>
           
-          <div *ngIf="departmentPercentages && departmentPercentages.length">
-            <h2>Department Mobility Percentages</h2>
-            <table mat-table [dataSource]="departmentPercentages" class="mat-elevation-z8">
-              <!-- Department Name Column -->
-              <ng-container matColumnDef="unitName">
-                <th mat-header-cell *matHeaderCellDef> Department </th>
-                <td mat-cell *matCellDef="let element"> {{ element.unitName }} </td>
-              </ng-container>
-          
-              <!-- Percentage Column -->
-              <ng-container matColumnDef="percentage">
-                <th mat-header-cell *matHeaderCellDef> % Mobility </th>
-                <td mat-cell *matCellDef="let element"> {{ element.percentage | number:'1.1-1' }}% </td>
-              </ng-container>
-          
-              <tr mat-header-row *matHeaderRowDef="['unitName', 'percentage']"></tr>
-              <tr mat-row *matRowDef="let row; columns: ['unitName', 'percentage'];"></tr>
-            </table>
-          </div>
+   
           
   
     <!-- Table Section -->
