--- a/src/app/mitav/mitav-mobility/mitav-mobility.component.html
+++ b/src/app/mitav/mitav-mobility/mitav-mobility.component.html
@@ -5,51 +5,47 @@
           דוח מיתב
         </h1>
     
-        <div class="filter-card-container">
-            <div class="filter-card">
-              <div dir="rtl" class="card mat-elevation-z8">
-                <div dir="rtl" class="card-body">
-                  <div class="filter-container">
-                    <!-- Source Filter -->
-                <!-- Toggle Group -->
-   
-    
-                  
-                    <!-- Date Filters -->
-                    <mat-form-field class="filter-field">
-                      <mat-label>Start Date</mat-label>
-                      <input
-                        matInput
-                        [matDatepicker]="startDatePicker"
-                        [(ngModel)]="startDate"
-                      />
-                      <mat-datepicker-toggle matSuffix [for]="startDatePicker"></mat-datepicker-toggle>
-                      <mat-datepicker #startDatePicker></mat-datepicker>
-                    </mat-form-field>
-                    
-                    <mat-form-field class="filter-field">
-                      <mat-label>End Date</mat-label>
-                      <input
-                        matInput
-                        [matDatepicker]="endDatePicker"
-                        [(ngModel)]="endDate"
-                      />
-                      <mat-datepicker-toggle matSuffix [for]="endDatePicker"></mat-datepicker-toggle>
-                      <mat-datepicker #endDatePicker></mat-datepicker>
-                    </mat-form-field>
-                    
-          
-                  <!-- Filter Buttons -->
-    <div class="filter-buttons" style="margin-top: 10px; text-align: right;">
-        <button mat-raised-button color="primary" (click)="applyDateFilter()">Apply</button>
-        <button mat-raised-button color="warn" (click)="resetFilter()">Reset</button>
-        
-    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
+<!-- Filters Section -->
+<div class="filter-card">
+    <div dir="rtl" class="card mat-elevation-z8">
+      <div class="card-body">
+        <div class="filter-container">
+          <!-- Department Multi-Select -->
+          <mat-form-field class="filter-field">
+            <mat-label>Select Departments</mat-label>
+            <mat-select [(value)]="selectedDepartments" multiple (selectionChange)="applyDepartmentFilter()">
+              <mat-option *ngFor="let department of departmentList" [value]="department">
+                {{ department }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+  
+          <!-- Start Date Filter -->
+          <mat-form-field class="filter-field">
+            <mat-label>Start Date</mat-label>
+            <input matInput [matDatepicker]="startDatePicker" [(ngModel)]="startDate" />
+            <mat-datepicker-toggle matSuffix [for]="startDatePicker"></mat-datepicker-toggle>
+            <mat-datepicker #startDatePicker></mat-datepicker>
+          </mat-form-field>
+  
+          <!-- End Date Filter -->
+          <mat-form-field class="filter-field">
+            <mat-label>End Date</mat-label>
+            <input matInput [matDatepicker]="endDatePicker" [(ngModel)]="endDate" />
+            <mat-datepicker-toggle matSuffix [for]="endDatePicker"></mat-datepicker-toggle>
+            <mat-datepicker #endDatePicker></mat-datepicker>
+          </mat-form-field>
+  
+          <!-- Filter Buttons -->
+          <div class="filter-buttons" style="margin-top: 10px; text-align: right;">
+            <button mat-raised-button color="primary" (click)="applyDateFilter()">Apply</button>
+            <button mat-raised-button color="warn" (click)="resetFilter()">Reset</button>
           </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
           
           <div class="gauge-section">
             <mat-card class="gauge-card">
@@ -61,8 +57,7 @@
                   [max]="100"
                   [label]="'Mobility Percentage'"
                   [append]="'%'"
-                  [foregroundColor]="'#00a65a'">
-                </ngx-gauge>
+                  [foregroundColor]="getGaugeColor()"> </ngx-gauge>
                 <div class="gauge-info">
                   <strong>Overall Mobility Percentage: {{ gaugeValue | number:'1.1-1' }}%</strong>
                 </div>
@@ -76,16 +71,25 @@
    
           
   
-    <!-- Table Section -->
-    <table mat-table [dataSource]="dataSource" matSort>
-      <ng-container *ngFor="let column of displayedColumns" [matColumnDef]="column">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ column }}</th>
-        <td mat-cell *matCellDef="let element">{{ element[column] }}</td>
-      </ng-container>
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-  
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
-  </div>
-  
+          <mat-tab-group>
+            <!-- Tab 1: Main Table -->
+            <mat-tab label="Main Table">
+              <div class="table-section">
+                <table mat-table [dataSource]="dataSource" matSort>
+                  <ng-container *ngFor="let column of displayedColumns" [matColumnDef]="column">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ column }}</th>
+                    <td mat-cell *matCellDef="let element">{{ element[column] }}</td>
+                  </ng-container>
+                  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                </table>
+                <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+              </div>
+            </mat-tab>
+        
+            <!-- Tab 2: Additional Table (Placeholder) -->
+            <mat-tab label="Additional Table">
+             
+            </mat-tab>
+          </mat-tab-group>
+        </div>
