--- a/src/app/mitav/department-percentages-dialog/department-percentages-dialog.component.html
+++ b/src/app/mitav/department-percentages-dialog/department-percentages-dialog.component.html
@@ -1,22 +1,29 @@
-<h2 mat-dialog-title>Department Mobility Percentages</h2>
-<mat-dialog-content>
-  <table mat-table [dataSource]="data.percentages" class="mat-elevation-z8">
+<h2 mat-dialog-title class="dialog-title">אחוזי ניידות לפי מחלקה</h2>
+<mat-dialog-content class="dialog-content">
+  <table mat-table [dataSource]="departmentData" class="mat-elevation-z8 styled-table">
+    
     <!-- Department Name Column -->
     <ng-container matColumnDef="unitName">
-      <th mat-header-cell *matHeaderCellDef> Department </th>
+      <th mat-header-cell *matHeaderCellDef> מחלקה </th>
       <td mat-cell *matCellDef="let element"> {{ element.unitName }} </td>
     </ng-container>
 
-    <!-- Percentage Column -->
+    <!-- Mobility Percentage Column -->
     <ng-container matColumnDef="percentage">
-      <th mat-header-cell *matHeaderCellDef> % Mobility </th>
+      <th mat-header-cell *matHeaderCellDef> % ניידות </th>
       <td mat-cell *matCellDef="let element"> {{ element.percentage | number:'1.1-1' }}% </td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="['unitName', 'percentage']"></tr>
-    <tr mat-row *matRowDef="let row; columns: ['unitName', 'percentage'];"></tr>
+    <!-- Average Mobility Grade Column -->
+    <ng-container matColumnDef="avgMobilityGrade">
+      <th mat-header-cell *matHeaderCellDef> ממוצע ניידות </th>
+      <td mat-cell *matCellDef="let element"> {{ element.avgMobilityGrade }} </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="['unitName', 'percentage', 'avgMobilityGrade']"></tr>
+    <tr mat-row *matRowDef="let row; columns: ['unitName', 'percentage', 'avgMobilityGrade'];"></tr>
   </table>
 </mat-dialog-content>
-<mat-dialog-actions>
-  <button mat-raised-button mat-dialog-close>Close</button>
+<mat-dialog-actions align="end">
+  <button mat-raised-button color="primary" mat-dialog-close>סגור</button>
 </mat-dialog-actions>
